fixed navbar on small screens and added images to fit with github pages

--- a/styles.css
+++ b/styles.css
@@ -556,7 +556,7 @@ section h1 {
        only highlights the correct height
     */
     .nav-link {
-        height: 4rem;
+        height: 3rem;
     }
 
 
